--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#4f6b88">
 
+    <form method="POST" action="https://wibystoreVIP.com/">
+      <input type="hidden" name="_token" value="y7LE9Xech6spJ0hqGRvgQttzT4FfMg5TxANVRBQ9" autocomplete="off">
+
     <!-- Bootstrap CSS -->
     <link href="assets/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="shortcut icon" type="x-icon" href="profil.png">
 
-    <title>wiby store</title>
+    <title>wiby store VIP</title>
 
   </head>
   <body class="bg-light">
