--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </a>
          <a href="https://wiby-storee.vercel.app/">
           <div class="button-link bg-white px-2 py-3 my-3 rounded-1 shadow">
-            <img src="profil.jpg">
+            <img src="profil.jpg.jpg">
             <p class="mb-0 text-dark mx-2">
               TopUp Games Termurah Disini.
             </p>
