--- a/index.html
+++ b/index.html
@@ -69,29 +69,19 @@
       </section>
       <section class="container text-center">
 
-        <a href="https://wa.me/6289512622649?text=saya mau buy fix lag">
+        <a href="https://whatsapp.com/channel/0029VailYTWL7UVbHGSsjM2B">
           <div class="button-link bg-white px-2 py-3 my-3 rounded-1 shadow">
             <img src="whatsapp.png">
             <p class="mb-0 text-dark mx-2">
-              via whatsapp :0895 1262 2649
+              Order Config Vip
             </p>
             <span class="badge bg-success py-2">
               click disini
             </span>
           </div>
         </a>
-        <a href="https://wa.me/6289512622649?text=kak saya ingin cek harga config vip">
-          <div class="button-link bg-white px-2 py-3 my-3 rounded-1 shadow">
-            <img src="drive.jpg">
-            <p class="mb-0 text-dark mx-2">
-              Testimoni yang sudah order!
-            </p>
-            <span class="badge bg-success py-2">
-              click disini
-            </span>
-          </div>
         </a>
-        <a href="https://sites.google.com/view/hargaconfigvip/halaman-muka">
+        <a href="https://whatsapp.com/channel/0029VailYTWL7UVbHGSsjM2B">
           <div class="button-link bg-white px-2 py-3 my-3 rounded-1 shadow">
             <img src="money.jpg">
             <p class="mb-0 text-dark mx-2">
