--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </section>
       <section class="container text-center">
 
-        <a href="https://whatsapp.com/channel/0029VailYTWL7UVbHGSsjM2B">
+        <a href="https://sites.google.com/view/wibystorevip">
           <div class="button-link bg-white px-2 py-3 my-3 rounded-1 shadow">
             <img src="whatsapp.png">
             <p class="mb-0 text-dark mx-2">
@@ -80,18 +80,7 @@
             </span>
           </div>
         </a>
-        </a>
-        <a href="https://whatsapp.com/channel/0029VailYTWL7UVbHGSsjM2B">
-          <div class="button-link bg-white px-2 py-3 my-3 rounded-1 shadow">
-            <img src="money.jpg">
-            <p class="mb-0 text-dark mx-2">
-              Cek harga config vip
-            </p>
-            <span class="badge bg-success py-2">
-              click disini
-            </span>
-          </div>
-        </a>
+        
          <a href="https://wiby-storee.vercel.app/">
           <div class="button-link bg-white px-2 py-3 my-3 rounded-1 shadow">
             <img src="profil.jpg.jpg">
